--- a/src/assets/styles.global.css
+++ b/src/assets/styles.global.css
@@ -7,8 +7,22 @@ html {
 }
 
 body {
-    padding: 1em;
-    display: flex;
-    justify-content: space-around;
+    padding: 0 1em;
     overflow: hidden;
+}
+
+.noselect {
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Old versions of Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
 }
